Task7/gatekeeper/constraint-templates/hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredvolumes
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredVolumes
      validation:
        openAPIV3Schema:
          type: object
          properties:
            forbiddenHostPath:
              type: boolean
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredvolumes

        violation[{"msg": msg}] {
            volume := input.review.object.spec.volumes[_]
            volume.hostPath
            msg := sprintf("Volume '%v' must not use hostPath", [volume.name])
        }
