Task7/gatekeeper/constraint-templates/runasnonroot.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredrunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredRunAsNonRoot
      validation:
        openAPIV3Schema:
          type: object
          properties:
            runAsNonRoot:
              type: boolean
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredrunasnonroot

        violation[{"msg": msg}] {
            container := input.review.object.spec.containers[_]
            container.securityContext.runAsUser == 0
            msg := sprintf("Container '%v' must not run as root (UID 0)", [container.name])
        }

        violation[{"msg": msg}] {
            container := input.review.object.spec.initContainers[_]
            container.securityContext.runAsUser == 0
            msg := sprintf("Init container '%v' must not run as root (UID 0)", [container.name])
        }

        violation[{"msg": msg}] {
            pod := input.review.object.spec
            pod.securityContext.runAsUser == 0
            msg := "Pod must not run as root (UID 0)"
        }
